NEXT-390 Added required fields for the product module

--- a/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -32,6 +32,7 @@
                           :label="$tc('sw-product.basicForm.labelManufacturer')"
                           :placeholder="$tc('sw-product.basicForm.placeholderManufacturer')"
                           name="manufacturer"
+                          validation="required"
                           v-model="product.manufacturerId">
                     {% block sw_product_basic_form_manufacturer_field_options %}
                         <option slot="options" v-for="manufacturer in manufacturers" :value="manufacturer.id">{{ manufacturer.name }}</option>
