--- a/Resources/administration/src/module/sw-product/component/sw-product-category-form/sw-product-category-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-category-form/sw-product-category-form.html.twig
@@ -7,6 +7,7 @@
                           name="catalogId"
                           :label="$tc('sw-product.categoryForm.labelCatalog')"
                           :placeholder="$tc('sw-product.categoryForm.placeholderCatalog')"
+                          validation="required"
                           v-model="product.catalogId">
                     <option slot="options" value="ffffffffffffffffffffffffffffffff">
                         {{ $tc('sw-product.categoryForm.optionDefaultCatalog') }}
