--- a/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
+++ b/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
@@ -169,7 +169,7 @@
         }
 
         &:hover,
-        &.is--selected {
+        &.is--active {
             background: @sw-multi-select-result-active-color-background;
             color: @sw-multi-select-result-active-color-text;
         }
