--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.less
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.less
@@ -65,6 +65,10 @@
                 }
             }
         }
+
+        .sw-page__smart-bar-amount {
+            font-weight: normal;
+        }
     }
 
     .sw-page__content {
