--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -1,18 +1,33 @@
 {% block sw_product_list %}
     <sw-page class="sw-product-list">
-        <template slot="smart-bar-header">
-            {% block sw_product_list_smart_bar_header %}
-                <h2>{{ $tc('sw-product.list.textProductOverview') }} <span v-if="!isLoading">({{ $tc('sw-product.list.textTotalProducts', total, { count: total }) }})</span></h2>
-            {% endblock %}
-        </template>
 
-        <template slot="smart-bar-actions">
-            {% block sw_product_list_smart_bar_actions %}
-                <sw-button :link="'sw.product.create'" variant="primary">
-                    {{ $tc('sw-product.list.buttonAddProduct') }}
-                </sw-button>
-            {% endblock %}
-        </template>
+        {% block sw_product_list_smart_bar_header %}
+            <template slot="smart-bar-header">
+                {% block sw_product_list_smart_bar_header_title %}
+                    <h2>
+                        {% block sw_product_list_smart_bar_header_title_text %}
+                            {{ $tc('sw-product.list.textProductOverview') }}
+                        {% endblock %}
+
+                        {% block sw_product_list_smart_bar_header_amount %}
+                            <span v-if="!isLoading" class="sw-page__smart-bar-amount">
+                                ({{ total }})
+                            </span>
+                        {% endblock %}
+                    </h2>
+                {% endblock %}
+            </template>
+        {% endblock %}
+
+        {% block sw_product_list_smart_bar_actions %}
+            <template slot="smart-bar-actions">
+                {% block sw_product_list_smart_bar_actions_add %}
+                    <sw-button :link="'sw.product.create'" variant="primary">
+                        {{ $tc('sw-product.list.buttonAddProduct') }}
+                    </sw-button>
+                {% endblock %}
+            </template>
+        {% endblock %}
 
         <template slot="content">
             {% block sw_product_list_content %}
