--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
@@ -23,7 +23,6 @@
                 <div class="sw-manufacturer-list__content">
                     {% block sw_manufacturer_list_grid %}
                         <sw-grid :items="manufacturers"
-                                 :pagination="true"
                                  :sortBy="sortBy"
                                  :sortDirection="sortDirection"
                                  :sidebar="true"
@@ -74,7 +73,7 @@
                                                             dataIndex="description"
                                                             truncate
                                                             sortable>
-                                                {{ item.description | truncate }}
+                                                {{ item.description | striphtml | truncate }}
                                             </sw-grid-column>
                                         {% endblock %}
 
