--- a/Resources/administration/src/module/sw-customer/page/sw-customer-create/sw-customer-create.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-create/sw-customer-create.html.twig
@@ -1,5 +1,4 @@
-{% block sw_customer_detail_content_tabs %}
-{% endblock %}
+{% block sw_customer_detail_content_tabs %}{% endblock %}
 
 {% block sw_customer_detail_header %}
     <template slot="smart-bar-header">
