--- a/Resources/administration/src/module/sw-product/page/sw-product-create/sw-product-create.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-create/sw-product-create.html.twig
@@ -1,5 +1,4 @@
-{% block sw_product_detail_content_tabs %}
-{% endblock %}
+{% block sw_product_detail_content_tabs %}{% endblock %}
 
 {% block sw_product_detail_content_tabs %}
     <sw-tabs class="sw-product-detail-page__tabs">
